# sys_prog_iu4

./: .gitattributes  .gitignore
.git-crypt/keys/default/0/: D5D901197EBDF7EB627C9651FC10B5BB6B791A7B.gpg
.github/workflows/: main.yaml
1_semester/hw0/: README.md
1_semester/hw2/: stepa_script.sh
1_semester/hw3/: script1.sh  script2.sh
1_semester/hw4/: README.md  from_fedor.sh  script.sh
1_semester/hw5/test_dir/: main  main.c
1_semester/hw6/: CMakeLists.txt  README.md
1_semester/hw6/include/: list.h  main.h  pair.h  serialize.h  stack.h
1_semester/hw6/src/: list.c  main.cpp
1_semester/hw6/test/src/: list.cpp  pair.cpp
1_semester/hw7/: CMakeLists.txt  out.txt
1_semester/hw7/src/: main_module.c
2_semester/group_task/: Makefile  README.md  hidden_miner.c  hidepid.h  timer.h
2_semester/hw1/: CMakeLists.txt
2_semester/hw1/include/: main.h
2_semester/hw1/src/: main.cpp  main_module.c
2_semester/hw1_task1/configs/: .clang-format
2_semester/hw1_task1/include/: main.h
2_semester/hw1_task1/src/: main.cpp  main_module.c
2_semester/hw1_task2/include/: main.h  named_pipe.h  unnamed_pipe.h
2_semester/hw1_task2/src/: main.cpp  named_pipe.c
2_semester/hw1_task3/include/: crypto.h  data_transfering.h  main.h
2_semester/hw1_task3/src/: crypto.c  data_transfering.c  main_module.c  string_util.c
2_semester/hw2/: CMakeLists.txt  main.c
2_semester/hw2/include/: main.h  string_util.h
2_semester/hw2/src/: main.cpp  main_module.c  named_pipe.c  string_util.c  unnamed_pipes.c
2_semester/hw3/: CMakeLists.txt  Makefile  kwallet.c  kwallet_cli.py
2_semester/hw3/include/: string_util.h
2_semester/hw3/src/: main.cpp
2_semester/hw4/: Makefile  README.md  kwallet_cli.py  kwallet_proc.c  kwallet_sys.c
2_semester/hw5/: Makefile  kwallet.c  kwallet_cli.c  kwallet_cli.py
2_semester/hw6/: Makefile  kwallet_cli.py
hw1/: task.md  task1.sh  task2.sh
hw2/: rotator_config.json  script.sh  task.md
hw3/: task.md
hw4/: script.sh
hw5/: CMakeLists.txt
hw6/: CMakeLists.txt
hw6/include/: list.h  stack.h  string_utils.h
hw6/src/: list.c  main.cpp  main_module.c  pair.c  serialize.c  stack.c  string_utils.c
hw6/test/src/: list.cpp  serialize.cpp  stack.cpp  string_utils.cpp
hw7/include/: main.h
hw7/libs/: googletest
hw7/src/: main.cpp
scripts/: cleanup.sh  install_dependency.sh  run_tests.sh
secrets/: sample.txt
